# xfoil-kernel

./: .gitignore  LICENSE.md  MANIFEST.in  README.md  pyproject.toml
baselines/: README.md  cases.json
baselines/reference/: naca0012_inviscid_alpha.json  naca0012_option_mach02_alpha4.json  naca0012_option_ncrit3_alpha4.json  naca0012_option_panel220_alpha4.json  naca0012_option_re5e5_alpha4.json  naca0012_option_split_ncrit_alpha4.json  naca0012_visc_re1e6_forced_transition.json  naca0012_visc_re1e6_free_transition.json  naca2412_visc_re1e6_free_transition.json  sc1095_visc_re1e6_free_transition.json  stress_naca0024_inviscid_alpha.json  stress_s102_visc_re1e6_free_transition.json  stress_s1223_visc_re5e5_forced_transition.json
data/airfoils/: README.md
docs/: c81-generation.md  cli.md  kernel-plan.md  protocol.md  python-api.md  warm-start-state.md
examples/: README.md  c81_naca0012.yaml  solve_alpha_sequence.py
fortran/: README.md  kernel_prompt_stubs.f  xfoil_kernel_core.f  xfoil_kernel_driver.f  xfoil_kernel_session.f
fortran/kernel/: README.md  aread.f  naca.f  spline.f  userio_kernel_subs.f  xbl.f  xblsys.f  xfoil_kernel_subs.f  xgdes_kernel_subs.f  xgeom_kernel_subs.f  xoper_kernel_subs.f  xpanel.f  xsolve.f  xutils.f
scripts/: README.md  build_kernel_driver.py  build_pristine_xfoil.py  compare_kernel_driver.py  generate_c81.py  run_kernel_driver.py  run_pristine_xfoil.py  write_reference_baselines.py  xfoil_worker.py
tests/: README.md  test_api_cli.py  test_baseline_tools.py  test_c81_generator.py  test_examples.py  test_kernel_extraction.py  test_modernization_safety.py  test_paths.py  test_public_api.py
tools/xfoil_kernel/: __init__.py  (+2 more)
(+9 files in other folders)
